--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@google-cloud/storage": "^7.0.0",
     "puppeteer-core": "^22.0.0",
-    "@sparticuz/chromium": "^123.0.0" 
+    "@sparticuz/chromium": "^123.0.0",
+    "firebase-admin": "^12.0.0",        
+    "@google-cloud/firestore": "^7.0.0"  
   },
   "devDependencies": {},
   "scripts": {
